09/11/2012 Added supprot for optional equality keywords

04/11/2012 Added support for ANTLR options in generated grammar files

20/06/2011 Integration of the tableau core with AST generation.

19/06/2011 Initial tableau core.

01/05/2011 Generation of AST for ANTLR grammar.

17/03/2011 ANTLR grammar generation. No AST.

11/08/2009 Initial tests with the grammar for the prover generator.