@@ -5,7 +5,7 @@
 
 #branch.bound=
 
-#equality.keywords={equality, equivalence, congruence}
+#equality.keywords={equality}
 #expression.left.delimiter=(
 #expression.right.delimiter=)
 
