@@ -1,10 +1,22 @@
-tableau.rule.delimiter=$;
-tableau.rule.branch.delimiter=$|
-tableau.rule.premise.delimiter=/
-list.left.delimiter=
-list.right.delimiter=
+#antlr.k = 1
+#antlr.superClass=mettel.core.language.MettelAbstractLogicParser
+#antlr.backtrack=false
+#antlr.memoize=false
+
+#branch.bound=
 branch.bound=((int)(java.lang.Math.pow(2,%l+1)+java.lang.Math.pow(4,%l+1)))
 ##The bound I expected
 #((int)java.lang.Math.pow(2,%l))
 ##M.Fisher bound
 #((int)java.lang.Math.pow(2,5*%l))
+
+equality.keywords={equality,equivalence}
+#expression.left.delimiter=(
+#expression.right.delimiter=)
+
+#list.left.delimiter=
+#list.right.delimiter=
+
+#tableau.rule.delimiter=$;
+#tableau.rule.branch.delimiter=$|
+#tableau.rule.premise.delimiter=/
