@@ -1,8 +1,17 @@
-expression.left.delimiter=(
-expression.right.delimiter=)
-tableau.rule.delimiter=$;
-tableau.rule.branch.delimiter=$|
-tableau.rule.premise.delimiter=/
-list.left.delimiter=
-list.right.delimiter=
+#antlr.k = 1
+#antlr.superClass=mettel.core.language.MettelAbstractLogicParser
+#antlr.backtrack=false
+#antlr.memoize=false
+
 #branch.bound=
+
+#equality.keywords={equality}
+#expression.left.delimiter=(
+#expression.right.delimiter=)
+
+#list.left.delimiter=
+#list.right.delimiter=
+
+#tableau.rule.delimiter=$;
+#tableau.rule.branch.delimiter=$|
+#tableau.rule.premise.delimiter=/
