@@ -1,4 +1,7 @@
-09/11/2012 Added supprot for optional equality keywords
+15/11/2012 Changed default equality keywords to "equality"
+           Fixed a bug with LTLC tableau
+
+09/11/2012 Added support for optional equality keywords
 
 04/11/2012 Added support for ANTLR options in generated grammar files
 
